# MCDC-agent

./: .gitignore  LICENSE  README.md  pyproject.toml
src/mcdc_agent/: build_index.py  cli.py  generate_docs.py  scrape_api.py  utils.py
src/mcdc_agent/onboarding/: agent.py  batch_executor.py  concepts.py  debugger.py  mcdc_api_reference.md  script_builder.py  tools.py  validator.py
src/mcdc_agent/vectorstore/25790fed-66c5-4dca-b60b-1d0706986683/: index_metadata.pickle
